--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -6,15 +6,24 @@
   <div class="col-md-6">
     <div class="well">
       <h2 class="text-center">Basic Membership</h2>
-      <h4>Sign up for free and get basic access to the community with free video tutorials and more!</h4>
-      <%= link_to "Sign up with Basic", new_user_registration_path, class: 'btn btn-primary btn-lg btn-block' %>
+      <h4>Sign up for free and get basic access to the community with free video tutorials and more!</h4><br/>
+      <%= link_to "Sign up with Basic", new_user_registration_path(plan: @basic_plan.id), class: 'btn btn-info btn-lg btn-block' %>
     </div>
   </div>
   <div class="col-md-6">
     <div class="well">
       <h2 class="text-center">Pro Membership</h2>
-      <h4>Sign up for the pro account for $10/month and get access to the community and subsciption-based products.</h4>
-      <%= link_to "Sign up with Pro", new_user_registration_path, class: 'btn btn-success btn-lg btn-block' %>
+      <h4>Sign up for the pro account for $10/month and get access to the community and subsciption-based products at discounted prices!</h4>
+      <%= link_to "Sign up with Pro", new_user_registration_path(plan: @pro_plan.id), class: 'btn btn-primary btn-lg btn-block' %>
     </div>
+  </div>
+</div>
+<div class="row">
+  <div class="col-md-12">
+   <div class="well">
+     <h2 class="text-center">Shea Forever Products</h2>
+     <h4 class="text-center">Not sure if you want to sign up? Check out our products, purchase if you like it, or sign up if you love it!</h4>
+     <%= link_to "Shop Now", about_path, class: 'btn btn-warning btn-lg btn-block' %>
+   </div>
   </div>
 </div>
